Fix: footer to be visible at bottom

--- a/style.css
+++ b/style.css
@@ -1,16 +1,27 @@
 :root {
-    --primary-color: #22C55E;
-    --second: #86198F;
+    --primary-color: #0077b6;
+    --second: #5a189a;
     --text-color: white;
+}
+*, *::before, *::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
     display: block;
     color: var(--text-color);
     background-color: var(--second);
 }
+.pagewrap{
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
 nav {
     width: 100%;
     background-color: var(--primary-color);
@@ -18,7 +29,8 @@ nav {
     padding: 1rem;
     border-bottom-left-radius: 1rem;
 }
-#div{
+
+.header{
     font-weight: bolder;
     font-size: 2rem;
     padding-left: 2rem;
@@ -29,22 +41,27 @@ a {
     font-size: 1rem;
     color: var(--text-color);
 }
-.list-style{
+
+.list-style {
     list-style: none;
     text-align: right;
     padding-inline-start: 0px;
     padding-right: 2rem;
 }
-.list{
+
+.list {
     display: inline;
     padding: 0rem 0.5rem;
 }
+
 .heading {
     text-align: center;
-    margin-bottom: 1.5rem;
+    padding:1rem;
+    padding-top: 2rem;
     color: var(--text-color);
 }
-.formula{
+
+.formula {
     text-align: center;
     /* margin-bottom: 1.5rem; */
     margin: auto;
@@ -52,10 +69,15 @@ a {
     padding: 0.5rem;
     border: 2px solid var(--primary-color);
 }
+main{
+    flex-grow: 1;
+}
+
 .angle-container {
     width: 50%;
     text-align: center;
     margin: auto;
+    padding:1rem 0;
 }
 
 .input-container {
@@ -84,54 +106,61 @@ a {
 }
 
 /* quiz */
-h2{
+h2 {
     text-align: center;
 }
-.output{
+
+.output {
     text-align: center;
     margin: 2rem 0;
     /* padding: 2rem; */
 }
-.container{
-    width:90%;
+
+.container {
+    width: 90%;
     text-align: center;
     margin: auto;
     max-width: 800px;
 }
-.qst-container{
+
+.qst-container {
     padding: 2rem;
     margin: 1rem 0;
     border-radius: 0.5rem;
     border: 2px solid var(--primary-color);
+    font-size: large;
 }
-.qst-container p{
+
+.qst-container p {
     margin-bottom: 2rem;
 }
 
-.button{
-   align-content: center;
+.button {
+    align-content: center;
 }
 
-/* .footer{
+.footer {
     background-color: var(--primary-color);
-    padding: 0.5rem;
-margin-top: 1rem;
-    position: absolute;
+    padding: 2rem;
+    margin-top: 1rem;
+    position:relative;
     bottom: 0;
-    left:0;
+    left: 0;
     right: 0;
     width: 100%;
-} 
-#footer{
-     background-color: var(--primary-color);
-     padding: 0.5rem;
-     margin-top: 1rem;
-     position: absolute;
-     bottom: 0;
-     left:0;
-     right: 0;
-     width: 100%;
+}
+
+/* #footer {
+    background-color: var(--primary-color);
+    padding: 0.5rem;
+    margin-top: 1rem;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
 } */
-h4{
+
+h4 {
     text-align: center;
 }
